# HuffmanCoding

./: .gitignore  CMakeLists.txt  README.md  codificare.h  decodificare.h  definitii.h  grafica.h  main.c  sortare.h
